--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,13 @@ repositories {
     jcenter()
 }
 
-dependencies {
-    // This dependency is found on compile classpath of this component and consumers.
-    implementation 'com.google.guava:guava:27.0.1-jre'
+test {
+    useJUnitPlatform()
+}
 
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
 }
 
 // Define the main class for the application
