--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,15 @@ dependencies {
     compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.21'
     compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '9.0.21'
 //    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-logging-juli', version: '9.0.21'
+
+    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.1.8.RELEASE'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
+
+    testCompile 'io.rest-assured:rest-assured:4.0.0'
 }
 
 // Define the main class for the application
