通常ServletとRestControllerを両方使えるようにした

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-<!--    <servlet>-->
-<!--        <servlet-name>HelloServlet</servlet-name>-->
-<!--        <servlet-class>com.example.HelloServlet</servlet-class>-->
-<!--    </servlet>-->
-<!--    <servlet-mapping>-->
-<!--        <servlet-name>HelloServlet</servlet-name>-->
-<!--        <url-pattern>/hello</url-pattern>-->
-<!--    </servlet-mapping>-->
+    <servlet>
+        <servlet-name>HelloServlet</servlet-name>
+        <servlet-class>com.example.HelloServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>HelloServlet</servlet-name>
+        <url-pattern>/hello</url-pattern>
+    </servlet-mapping>
 
     <listener>
         <!-- ContextLoaderListenerクラスをサーブレットコンテナのリスナクラスとして指定します. -->
@@ -55,6 +55,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>app</servlet-name>
-        <url-pattern>/</url-pattern>
+        <!-- "/"だと"/hello"で呼び出せたが、"/app"にすると"/app/hello"で呼べなくなったので、"/app/*"にする -->
+        <url-pattern>/app/*</url-pattern>
     </servlet-mapping>
 </web-app>
