--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,38 +19,43 @@
             org.springframework.web.context.ContextLoaderListener
         </listener-class>
     </listener>
-    <context-param>
-        <!-- AnnotationConfigWebApplicationContextクラスをサーブレットコンテナのパラメータに指定します. -->
-        <param-name>contextClass</param-name>
-        <param-value>
-            org.springframework.web.context.support.AnnotationConfigWebApplicationContext
-        </param-value>
-    </context-param>
+<!--    <context-param>-->
+<!--        &lt;!&ndash; AnnotationConfigWebApplicationContextクラスをサーブレットコンテナのパラメータに指定します. &ndash;&gt;-->
+<!--        <param-name>contextClass</param-name>-->
+<!--        <param-value>-->
+<!--            org.springframework.web.context.support.AnnotationConfigWebApplicationContext-->
+<!--        </param-value>-->
+<!--    </context-param>-->
+<!--    <context-param>-->
+<!--        &lt;!&ndash; 作成したコンフィギュレーションクラスをサーブレットコンテナのパラメータに指定します. &ndash;&gt;-->
+<!--        <param-name>contextConfigLocation</param-name>-->
+<!--        <param-value>com.example.config.app.AppConfig</param-value>-->
+<!--    </context-param>-->
     <context-param>
         <!-- 作成したコンフィギュレーションクラスをサーブレットコンテナのパラメータに指定します. -->
         <param-name>contextConfigLocation</param-name>
-        <param-value>com.example.AppConfig</param-value>
+        <param-value>/WEB-INF/app-config-test.xml</param-value>
     </context-param>
 
     <servlet>
         <servlet-name>app</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-<!--        <init-param>-->
-<!--            <param-name>contextConfigLocation</param-name>-->
-<!--            <param-value>/WEB-INF/mvc-config.xml</param-value>-->
-<!--        </init-param>-->
         <init-param>
-            <!-- contextClassパラメータにAnnotationConfigWebApplicationContextを指定します. -->
-            <param-name>contextClass</param-name>
-            <param-value>
-                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
-            </param-value>
-        </init-param>
-        <init-param>
-            <!-- contextConfigLocationパラメータに作成したコンフィギュレーションクラスを指定します. -->
             <param-name>contextConfigLocation</param-name>
-            <param-value>com.example.WebMvcConfig</param-value>
+            <param-value>/WEB-INF/mvc-config-test.xml</param-value>
         </init-param>
+<!--        <init-param>-->
+<!--            &lt;!&ndash; contextClassパラメータにAnnotationConfigWebApplicationContextを指定します. &ndash;&gt;-->
+<!--            <param-name>contextClass</param-name>-->
+<!--            <param-value>-->
+<!--                org.springframework.web.context.support.AnnotationConfigWebApplicationContext-->
+<!--            </param-value>-->
+<!--        </init-param>-->
+<!--        <init-param>-->
+<!--            &lt;!&ndash; contextConfigLocationパラメータに作成したコンフィギュレーションクラスを指定します. &ndash;&gt;-->
+<!--            <param-name>contextConfigLocation</param-name>-->
+<!--            <param-value>com.example.config.web.WebMvcConfig</param-value>-->
+<!--        </init-param>-->
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
