--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
-
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.2.3.RELEASE'
     testCompile 'io.rest-assured:rest-assured:4.1.2'
 }
 
